lib/misc/ace.pas


      function AdsGetIndexCondition( hIndex: ADSHANDLE;
                                     pucExpr: PAceChar;
                                     pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetIndexExpr( hIndex: ADSHANDLE;
                                pucExpr: PAceChar;
                                pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetIndexFilename( hIndex: ADSHANDLE;
                                    usOption: UNSIGNED16;
                                    pucName: PAceChar;
                                    pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetIndexHandle( hTable: ADSHANDLE;
                                  pucIndexOrder: PAceChar;
                                  phIndex: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetIndexHandleByOrder( hTable: ADSHANDLE;
                                         usOrderNum: UNSIGNED16;
                                         phIndex: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetIndexHandleByExpr( hTable: ADSHANDLE;
                                        pucExpr: PAceChar;
                                        ulDescending: UNSIGNED32;
                                        phIndex: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetIndexName( hIndex: ADSHANDLE;
                                pucName: PAceChar;
                                pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetIndexOrderByHandle( hIndex: ADSHANDLE;
                                         pusIndexOrder: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetJulian( hTable: ADSHANDLE;
                             pucFldName: PAceChar;
                             plDate: pSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetKeyCount( hIndex: ADSHANDLE;
                               usFilterOption: UNSIGNED16;
                               pulCount: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetKeyNum( hIndex: ADSHANDLE;
                             usFilterOption: UNSIGNED16;
                             pulKey: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetKeyLength( hIndex: ADSHANDLE;
                                pusKeyLength: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetKeyType( hIndex: ADSHANDLE;
                              usKeyType: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetLastError( pulErrCode: PUNSIGNED32;
                                pucBuf: PAceChar;
                                pusBufLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetLastTableUpdate( hTable: ADSHANDLE;
                                      pucDate: PAceChar;
                                      pusDateLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetLogical( hTable: ADSHANDLE;
                              pucFldName: PAceChar;
                              pbValue: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetLong( hTable: ADSHANDLE;
                           pucFldName: PAceChar;
                           plValue: pSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

{$IFDEF ADSDELPHI4_OR_NEWER}
      function AdsGetLongLong( hTable: ADSHANDLE;
                               pucFldName: PAceChar;
                               pqValue: pSIGNED64 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
{$ENDIF}

      function AdsGetMemoBlockSize( hTable: ADSHANDLE;
                                    pusBlockSize: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetMemoLength( hTable: ADSHANDLE;
                                 pucFldName: PAceChar;
                                 pulLength: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetMemoDataType( hTable: ADSHANDLE;
                                   pucFldName: PAceChar;
                                   pusType: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetMilliseconds( hTable: ADSHANDLE;
                                   pucFldName: PAceChar;
                                   plTime: pSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

{$IFDEF ADSDELPHI4_OR_NEWER}
      function AdsGetMoney( hTbl: ADSHANDLE;
                            pucFldName: PAceChar;
                            pqValue: pSIGNED64 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
{$ENDIF}

      function AdsGetActiveLinkInfo( hDBConn: ADSHANDLE;
                                     usLinkNum: UNSIGNED16;
                                     pucLinkInfo: PAceChar;
                                     pusBufferLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetNumActiveLinks( hDBConn: ADSHANDLE;
                                     pusNumLinks: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetNumFields( hTable: ADSHANDLE;
                                pusCount: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetNumIndexes( hTable: ADSHANDLE;
                                 pusNum: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetNumFTSIndexes( hTable: ADSHANDLE;
                                    pusNum: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetNumLocks( hTable: ADSHANDLE;
                               pusNum: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetNumOpenTables( pusNum: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetRecord( hTable: ADSHANDLE;
                             pucRec: PAceChar;
                             pulLen: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetRecordCount( hTable: ADSHANDLE;
                                  usFilterOption: UNSIGNED16;
                                  pulCount: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetRecordNum( hTable: ADSHANDLE;
                                usFilterOption: UNSIGNED16;
                                pulRec: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetRecordLength( hTable: ADSHANDLE;
                                   pulLength: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetRecordCRC( hTable: ADSHANDLE;
                                pulCRC: PUNSIGNED32;
                                ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetRelKeyPos( hIndex: ADSHANDLE;
                                pdPos: pDOUBLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetScope( hIndex: ADSHANDLE;
                            usScopeOption: UNSIGNED16;
                            pucScope: PAceChar;
                            pusBufLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetSearchPath( pucPath: PAceChar;
                                 pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetServerName( hConnect: ADSHANDLE;
                                 pucName: PAceChar;
                                 pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetServerTime( hConnect: ADSHANDLE;
                                 pucDateBuf: PAceChar;
                                 pusDateBufLen: PUNSIGNED16;
                                 plTime: pSIGNED32;
                                 pucTimeBuf: PAceChar;
                                 pusTimeBufLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetShort( hTable: ADSHANDLE;
                            pucFldName: PAceChar;
                            psValue: pSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetString( hTable: ADSHANDLE;
                             pucFldName: PAceChar;
                             pucBuf: PAceChar;
                             pulLen: PUNSIGNED32;
                             usOption: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetStringW( hObj: ADSHANDLE;
                              pucFldName: PAceChar;
                              pwcBuf: PWideChar;
                              pulLen: PUNSIGNED32;
                              usOption: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetTableAlias( hTable: ADSHANDLE;
                                 pucAlias: PAceChar;
                                 pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetTableCharType( hTable: ADSHANDLE;
                                    pusCharType: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetTableConnection( hTable: ADSHANDLE;
                                      phConnect: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetTableFilename( hTable: ADSHANDLE;
                                    usOption: UNSIGNED16;
                                    pucName: PAceChar;
                                    pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetTableHandle( pucName: PAceChar;
                                  phTable: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetTableHandle25( hConnect: ADSHANDLE;
                                    pucName: PAceChar;
                                    phTable: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetTableLockType( hTable: ADSHANDLE;
                                    pusLockType: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetTableMemoSize( hTable: ADSHANDLE;
                                    pusMemoSize: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetTableOpenOptions( hTable: ADSHANDLE;
                                       pulOptions: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
